# ppmpi

./: .gitignore  .ycm_extra_conf.py  Makefile.am  configure.ac
solution/chap03/: 01.md  02  02.cxx  03.md  04  04.cxx  04.md  Makefile.am  assign_01  assign_01.cxx  assign_01.md
solution/chap04/: .run.sh  01.md  02.md  Makefile.am  assign_01  assign_01.cxx
src/: Makefile.am
src/chap03/: .run.sh  Makefile.am  greetings  greetings.cxx
src/chap04/: .run.sh  Makefile.am  get_data  get_data.cxx  serial  serial.cxx  trap  trap.cxx  trapezoid.cxx  trapezoid.hxx
src/chap05/: .run.sh  Makefile.am  auxiliary.cxx  auxiliary.hxx  get_data.cxx  get_data.hxx  mat_vec.in  parallel_dot.cxx  parallel_dot_allreduce.cxx  parallel_mat_vec.cxx  serial_dot.cxx  serial_mat_vec.cxx  trap_area.cxx  trap_area_reduce.cxx  vector_data.in
src/chap06/: .run.sh  Makefile.am  count.cxx  get_data3.cxx  get_data4.cxx  send_col.cxx  send_col_to_row.cxx  send_row.cxx  send_triangle.cxx  sparse_row.cxx
src/chap07/: Makefile.am  comm_create.cxx  comm_split.cxx
