bin_PROGRAMS = count get_data3 get_data4 send_col \
							 send_col_to_row send_row \
							 send_triangle sparse_row

count_SOURCES = count.cxx

get_data3_SOURCES = ../chap04/trapezoid.cxx \
										get_data3.cxx

get_data4_SOURCES = ../chap04/trapezoid.cxx \
										get_data4.cxx

send_col_SOURCES = send_col.cxx

send_col_to_row_SOURCES = send_col_to_row.cxx

send_row_SOURCES = send_row.cxx

send_triangle_SOURCES = send_triangle.cxx

sparse_row_SOURCES = sparse_row.cxx
